crates/rome_js_formatter/tests/specs/prettier/typescript/comments/type-parameters.ts.snap
---
source: crates/rome_js_formatter/tests/prettier_tests.rs
info:
  test_file: "typescript\\comments\\type-parameters.ts"
---

# Input

```js
functionName<A /* A comment */>();
const a: T</* comment */> = 1;
functionName</* comment */>();
function foo</* comment */>() {}
interface Foo {
 </* comment */>(arg): any;
}
type T = </* comment */>(arg) => any;

functionName<
  A // comment
>();
const a: T<
  // comment
> = 1;
functionName<
  // comment
>();
function foo<
  // comment
>() {}
interface Foo {
 <
  A// comment
 >(arg): any;
}
type T = <
  // comment
>(arg) => any;
```


# Prettier differences

```diff
--- Prettier
+++ Rome
@@ -3,7 +3,7 @@
 functionName</* comment */>();
 function foo</* comment */>() {}
 interface Foo {
-  </* comment */>(arg): any;
+ </* comment */>(arg): any;
 }
 type T = </* comment */>(arg) => any;
 
@@ -26,6 +26,4 @@
 }
 type T = <
   // comment
->(
-  arg,
-) => any;
+>(arg) => any;
```

# Output

```js
functionName<A /* A comment */>();
const a: T</* comment */> = 1;
functionName</* comment */>();
function foo</* comment */>() {}
interface Foo {
 </* comment */>(arg): any;
}
type T = </* comment */>(arg) => any;

functionName<A>(); // comment
const a: T<
  // comment
> = 1;
functionName<
  // comment
>();
function foo<
  // comment
>() {}
interface Foo {
  <
    A, // comment
  >(
    arg,
  ): any;
}
type T = <
  // comment
>(arg) => any;
```


# Errors
```
type-parameters.ts:2:25 SyntaxError ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × expected a type parameter but instead found '>'
  
  × Expected a type parameter here
  
    ┌─ type-parameters.ts:2:25
    │
  2 │ const a: T</* comment */> = 1;
    │                         ^
  
type-parameters.ts:3:27 SyntaxError ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × expected a type parameter but instead found '>'
  
  × Expected a type parameter here
  
    ┌─ type-parameters.ts:3:27
    │
  3 │ functionName</* comment */>();
    │                           ^
  
type-parameters.ts:4:27 SyntaxError ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × expected a type parameter but instead found '>'
  
  × Expected a type parameter here
  
    ┌─ type-parameters.ts:4:27
    │
  4 │ function foo</* comment */>() {}
    │                           ^
  
type-parameters.ts:6:16 SyntaxError ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × expected a type parameter but instead found '>'
  
  × Expected a type parameter here
  
    ┌─ type-parameters.ts:6:16
    │
  6 │  </* comment */>(arg): any;
    │                ^
  
type-parameters.ts:8:24 SyntaxError ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × expected a type parameter but instead found '>'
  
  × Expected a type parameter here
  
    ┌─ type-parameters.ts:8:24
    │
  8 │ type T = </* comment */>(arg) => any;
    │                        ^
  
type-parameters.ts:15:1 SyntaxError ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × expected a type parameter but instead found '>'
  
  × Expected a type parameter here
  
     ┌─ type-parameters.ts:15:1
     │
  15 │ > = 1;
     │ ^
  
type-parameters.ts:18:1 SyntaxError ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × expected a type parameter but instead found '>'
  
  × Expected a type parameter here
  
     ┌─ type-parameters.ts:18:1
     │
  18 │ >();
     │ ^
  
type-parameters.ts:21:1 SyntaxError ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × expected a type parameter but instead found '>'
  
  × Expected a type parameter here
  
     ┌─ type-parameters.ts:21:1
     │
  21 │ >() {}
     │ ^
  
type-parameters.ts:29:1 SyntaxError ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × expected a type parameter but instead found '>'
  
  × Expected a type parameter here
  
     ┌─ type-parameters.ts:29:1
     │
  29 │ >(arg) => any;
     │ ^
  

```


